# causalos-rt

./: .gitignore  Cargo.toml  README.md  findings.md  progress.md  task_plan.md
docs/: AGENTS_HANDBOOK.md  API_SPEC.md  ARCHITECTURE.md  DESIGN_SPECS.md  PRD.md  QUICKSTART.md  ROADMAP.md  TECH_STACK.md
fbs/: hotpath.fbs
proto/: kernel.proto
sdk/: Cargo.toml  build.rs
sdk/examples/: causal_dashboard.rs  learning_loop.rs  rogue_agent.rs  smoke_test.rs
sdk/src/: lib.rs  types.rs
sdk/src/cache/: l1.rs  mod.rs
sdk/src/ipc/: client.rs  mod.rs
sdk/src/memory/: mod.rs  windows.rs
sidecar/: Cargo.toml  build.rs
sidecar/src/: lib.rs  main.rs
sidecar/src/engine/: diagnostics.rs  governance.rs  mod.rs  promotion.rs  ranking.rs  simulation.rs  trace.rs
sidecar/src/ipc/: windows.rs
sidecar/src/storage/: ledger.rs
